--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "browser-sync": "^2.26.3",
-    "gulp": "^3.9.1",
-    "gulp-replace": "^1.0.0"
+    "gulp": "^3.9.1"
   },
   "scripts": {
     "start": "gulp"
